Add /start API
